@startuml

title __ENGINE's Class Diagram__\n

  namespace com.apetrei.engine {
    class com.apetrei.engine.ConfigHandler {
        {static} - UPDATE_CAP : double
        {static} - debugMode : boolean
        {static} - enginePower : float
        {static} - height : int
        {static} - maneuverability : float
        {static} - maxPlayerHealt : int
        {static} - scale : float
        {static} - title : String
        {static} - width : int
        {static} + getEnginePower()
        {static} + getHeight()
        {static} + getManeuverability()
        {static} + getMaxPlayerHealt()
        {static} + getScale()
        {static} + getTitle()
        {static} + getUpdateCap()
        {static} + getWidth()
        {static} + isDebugMode()
        {static} + setManeuverability()
        {static} + setMaxPlayerHealt()
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.GameContainer {
        ~ sceneStack : Stack<Scene>
        - running : boolean
        - thread : Thread
        + GameContainer()
        + close()
        + getHudManager()
        + getInput()
        + getMenuManager()
        + getObjectManager()
        + getPhysicsSystem()
        + getRenderer()
        + getWindow()
        + goBack()
        + goTo()
        + run()
        + start()
        + stop()
    }
  }
  

  com.apetrei.engine.GameContainer .up.|> java.lang.Runnable
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.gui.HUDManager : hudManager
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.input.Input : input
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.gui.MenuManager : menuManager
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.objects.ObjectManager : objectManager
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.physics.PhysicsSystem2D : physicsSystem
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.renderer.Renderer : renderer
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.renderer.Window : window


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
